# tcp-to-aedat4-converter

./: ARCHITECTURE.md  CMakeLists.txt  README.md
docs/: TESTING_STRATEGY.md
include/: config.hpp  frame_unpacker.hpp  tcp_receiver.hpp
src/: frame_unpacker.cpp  main.cpp  tcp_receiver.cpp
test/: demo_fake_camera.py  fake_camera.py  fake_camera_udp.py  fast_fake_camera.py  pro_viewer.py  realistic_camera.py  simple_viewer.py
